  Minor Features:
    - Teleportation to hex cores now works while inside a spidertron or other vehicle, bringing the vehicle with you.
    - Added hotkeys for opening/closing the questbook, catalog, and trade overview.
  Bugfixes:
    - Fixed that dungeon laser and tesla turrets were frozen on Aquilo.
  Changes:
    - Swapped the meanings of the bronze star halves in item ranks.
  Balancing:
    - The Quantum Bazaar no longer lets you buy items of qualities that you haven't yet unlocked.  Selling items of locked qualities is still allowed.
    - Fixed that "upgrade all item buffs" could get stuck in an infinite loop and crash the game.
  Gui:
    - Added notes to the rewards unlocking the sink and generator modes to indicate the trade-offs of using them, allowing for a more concise description of each mode.
    - Changed the checkmarks and X's for the buy/sell rank-up instructions to checkboxes which check off and gray out when completed.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 6/12/25
  Bugfixes:
    - Fixed that quest progress was getting reset upon updating to some versions of the mod.
        This version recalculates some important quest progress like catalog completion.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 6/12/25
  Major Features:
    - Added the electromagnetic penetrator handheld weapon.
  Minor Features:
    - Added the "ping in chat" button for trades in the trade overview.
    - Added mod settings for tweaking trade productivity requirements for ranking up items.
    - Added mod settings for scaling dungeon chest loot value.
  Changes:
    - The Sentient Spider is now equipped with six electromagnetic penetrators instead of one (buffed) teslagun.
    - Changed Sentient Spider recipe to reflect its new abilities.
    - Recalculated item values on Aquilo and Fulgora.