@@ -524,6 +524,8 @@ rank-bonus-unique-3=This item now shows up in [font=__4__][color=__3__]__1__[.co
 rank-bonus-unique-4=Trades involving this item are no longer lost to hex core deletion and instead relocated to another random hex core.
 rank-bonus-unique-5=This item is now exchangeable at the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font].
 open-in-factoriopedia=Open in Factoriopedia.
+open-in-trade-overview-input=Open in trade overview as a trade input.
+open-in-trade-overview-output=Open in trade overview as a trade output.
 selling-info=Selling counts even if no coins are involved.
 buying-info=Buying counts even if no coins are involved.
 higher-qualities-count=Higher qualities count.
